fix z-index issues

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -17,6 +17,7 @@ a[data-toggle="popover"] {
   text-align: center;
   background-color: #ffd54f;
   color: #424242;
+  z-index: 50;
 }
 .close-announcement {
   width: 20%;
